--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "debug.ios": "npm run preparedemo && cd demo && tns debug ios --emulator",
     "debug.android": "npm run preparedemo && cd demo && tns debug android --emulator",
     "preparedemo": "npm run build && cd demo && tns plugin remove nativescript-pdf-viewer && tns plugin add .. && tns install",
-    "setup": "npm install && cd demo && npm install && cd .. && npm run build && cd demo && tns plugin add .. && cd .."
+    "setup": "npm install && cd demo && npm install && cd .. && npm run build && cd demo && tns plugin add .. && cd ..",
+    "lint": "tslint *.ts --exclude \"*.d.ts\""
   },
   "repository": {
     "type": "git",
