--- a/demo/package.json
+++ b/demo/package.json
@@ -1,46 +1,33 @@
 {
-  "description": "NativeScript Application",
-  "license": "SEE LICENSE IN <your-license-filename>",
-  "readme": "NativeScript Application",
-  "repository": "<fill-your-repository-here>",
   "nativescript": {
     "id": "org.nativescript.pdfdemo",
-    "tns-android": {
-      "version": "2.5.0-next-2016-11-28-1432"
-    },
     "tns-ios": {
-      "version": "2.4.0"
+      "version": "5.3.1"
+    },
+    "tns-android": {
+      "version": "5.3.1"
     }
   },
   "dependencies": {
-    "@angular/common": "2.1.2",
-    "@angular/compiler": "2.1.2",
-    "@angular/core": "2.1.2",
-    "@angular/forms": "2.1.2",
-    "@angular/http": "2.1.2",
-    "@angular/platform-browser": "2.1.2",
-    "@angular/platform-browser-dynamic": "2.1.2",
-    "@angular/router": "3.1.2",
-    "nativescript-angular": "1.1.3",
-    "nativescript-theme-core": "^0.2.1",
-    "reflect-metadata": "~0.1.8",
-    "rxjs": "5.0.0-beta.12",
-    "tns-core-modules": "2.5.0"
+    "nativescript-pdf-viewer": "file:../src",
+    "nativescript-theme-core": "^1.0.4",
+    "nativescript-unit-test-runner": "^0.3.4",
+    "tns-core-modules": "^5.1.0"
   },
   "devDependencies": {
-    "babel-traverse": "6.22.1",
-    "babel-types": "6.22.0",
-    "babylon": "6.15.0",
-    "lazy": "1.0.11",
-    "nativescript-dev-android-snapshot": "^0.*.*",
-    "nativescript-dev-typescript": "^0.3.2",
-    "typescript": "^2.1.6",
-    "zone.js": "~0.6.21"
+    "jasmine-core": "^2.5.2",
+    "karma": "^1.3.0",
+    "karma-jasmine": "^1.0.2",
+    "karma-nativescript-launcher": "^0.4.0",
+    "nativescript-css-loader": "~0.26.1",
+    "nativescript-dev-typescript": "~0.7.4",
+    "nativescript-dev-webpack": "~0.17.0",
+    "tns-platform-declarations": "^5.1.0",
+    "tslint": "~5.11.0",
+    "typescript": "~2.8.2"
   },
   "scripts": {
-    "reinstall:ios": "tns platform remove ios && tns platform add ios && tns plugin add ..",
-    "reinstall:android": "tns platform remove android && tns platform add android && tns plugin add ..",
-    "android": "tns run android",
-    "ios": "tns run ios"
+    "build.plugin": "cd ../src && npm run build",
+    "ci.tslint": "npm i && tslint --config '../tslint.json' 'app/**/*.ts' --exclude '**/node_modules/**'"
   }
 }
